[gd_scene load_steps=17 format=2]

[ext_resource path="res://creaster.gd" type="Script" id=1]
[ext_resource path="res://texture/static/blackback.png" type="Texture" id=2]
[ext_resource path="res://playernode.gd" type="Script" id=3]
[ext_resource path="res://player.tscn" type="PackedScene" id=4]
[ext_resource path="res://texture/knight quest/cre.wav" type="AudioStream" id=5]
[ext_resource path="res://texture/static/hit!.wav" type="AudioStream" id=6]
[ext_resource path="res://texture/static/enemykill.wav" type="AudioStream" id=7]
[ext_resource path="res://texture/static/gameover.wav" type="AudioStream" id=8]
[ext_resource path="res://firerecharge.tscn" type="PackedScene" id=9]
[ext_resource path="res://texture/knight quest/salle trone.png" type="Texture" id=10]
[ext_resource path="res://texture/knight quest/creidle.png" type="Texture" id=11]
[ext_resource path="res://text+back.tres" type="DynamicFont" id=12]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 537.666, 31.8961 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 28.2174, 329.782 )

[sub_resource type="Animation" id=3]
resource_name = "normal"
length = 0.8
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 469.427, 502.818 )

[node name="main" type="Node"]
script = ExtResource( 1 )

[node name="mur" type="Node" parent="."]
editor/display_folded = true

[node name="StaticBody2D" type="StaticBody2D" parent="mur"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="mur/StaticBody2D"]
position = Vector2( 512.186, -2.39899 )
shape = SubResource( 1 )

[node name="StaticBody2D4" type="StaticBody2D" parent="mur"]
position = Vector2( 1027.89, 183.391 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="mur/StaticBody2D4"]
position = Vector2( -4.23779, 116.969 )
shape = SubResource( 2 )

[node name="StaticBody2D2" type="StaticBody2D" parent="mur"]
position = Vector2( 13.6361, 600.849 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="mur/StaticBody2D2"]
position = Vector2( 502.1, -4.91095 )
shape = SubResource( 1 )

[node name="StaticBody2D3" type="StaticBody2D" parent="mur"]
position = Vector2( -1.43201, 183.391 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="mur/StaticBody2D3"]
position = Vector2( -3.51129, 116.048 )
shape = SubResource( 2 )

[node name="background" type="Sprite" parent="mur"]
position = Vector2( 533.39, 303.012 )
scale = Vector2( 33.4195, 19.2953 )
z_index = -3
texture = ExtResource( 2 )

[node name="playernode" type="Node" parent="."]
editor/display_folded = true
script = ExtResource( 3 )

[node name="player" parent="playernode" instance=ExtResource( 4 )]
position = Vector2( 513.124, 304.811 )
z_index = 1
collision/safe_margin = 0.001

[node name="sond" type="Node" parent="."]
editor/display_folded = true

[node name="musique" type="AudioStreamPlayer" parent="sond"]
stream = ExtResource( 5 )

[node name="hit" type="AudioStreamPlayer" parent="sond"]
stream = ExtResource( 6 )

[node name="enemykill" type="AudioStreamPlayer" parent="sond"]
stream = ExtResource( 7 )
volume_db = -16.64

[node name="gameover" type="AudioStreamPlayer" parent="sond"]
stream = ExtResource( 8 )

[node name="firerecharge" parent="." instance=ExtResource( 9 )]
position = Vector2( 904.648, 491.095 )

[node name="cinema" type="Node" parent="."]

[node name="trone" type="Sprite" parent="cinema"]
visible = false
position = Vector2( 502.681, 301.608 )
scale = Vector2( 0.41571, 0.41571 )
texture = ExtResource( 10 )

[node name="roi" type="Sprite" parent="cinema"]
position = Vector2( 503.199, 184.006 )
scale = Vector2( 0.157091, 0.157091 )
texture = ExtResource( 11 )
vframes = 2
hframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="cinema/roi"]
anims/normal = SubResource( 3 )

[node name="Area2D" type="Area2D" parent="cinema/roi"]
position = Vector2( 0, -9.31323 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="cinema/roi/Area2D"]
position = Vector2( -53.3594, 15.2456 )
shape = SubResource( 4 )

[node name="blacktext" type="Sprite" parent="cinema"]
visible = false
position = Vector2( 515.251, 301.943 )
scale = Vector2( 33.2032, 19.8714 )
z_index = 1
texture = ExtResource( 2 )

[node name="text" type="Label" parent="cinema/blacktext"]
margin_left = -15.0
margin_top = -15.0
margin_right = 291.0
margin_bottom = 281.0
rect_scale = Vector2( 0.1, 0.1 )
custom_fonts/font = ExtResource( 12 )
text = "test"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="indication" type="Label" parent="cinema/blacktext"]
margin_left = -15.0
margin_top = 10.0
margin_right = 283.0
margin_bottom = 56.0
rect_scale = Vector2( 0.1, 0.1 )
custom_fonts/font = ExtResource( 12 )
text = "TEST"

[node name="Timer" type="Timer" parent="."]
autostart = true
[connection signal="pause" from="." to="playernode/player" method="_on_main_pause"]
[connection signal="pause" from="." to="playernode" method="_on_main_pause"]
[connection signal="unpause" from="." to="playernode/player" method="_on_main_unpause"]
[connection signal="unpause" from="." to="playernode" method="_on_main_unpause"]
[connection signal="finished" from="sond/musique" to="." method="_on_musique_finished"]
[connection signal="area_entered" from="cinema/roi/Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
